syntax = "proto3";

package balancerpb;

import "modules/balancer/agent/balancerpb/module.proto";

option go_package = "github.com/yanet-platform/yanet2/modules/"
		    "balancer/agent/balancerpb;balancerpb";

// Layer 4 (TCP/UDP) packet processing statistics.
//
// Tracks packets processed at the transport layer, including
// successful forwarding and various failure conditions.
message L4Stats {
	// Total number of incoming L4 packets (TCP or UDP)
	uint64 incoming_packets = 1;

	// Packets that failed virtual service selection.
	// Incremented when no matching virtual service is found for the packet.
	uint64 select_vs_failed = 2;

	// Packets rejected due to invalid format or content.
	// Includes malformed packets, incorrect checksums, etc.
	uint64 invalid_packets = 3;

	// Packets that failed real server selection.
	// Incremented when a virtual service is matched but no suitable
	// real server can be selected (e.g., all reals disabled or removed).
	uint64 select_real_failed = 4;

	// Total number of packets successfully forwarded to real servers
	uint64 outgoing_packets = 5;
}

// ICMP packet processing statistics.
//
// Tracks both ICMP echo (ping) and ICMP error messages.
// Separate statistics are maintained for ICMPv4 and ICMPv6.
message IcmpStats {
	// Total number of incoming ICMP packets
	uint64 incoming_packets = 1;

	// ICMP packets rejected due to source address filtering.
	// Incremented when the source address is not in the allowed_srcs list.
	uint64 src_not_allowed = 2;

	// ICMP echo requests that were responded to.
	// The balancer can respond to pings for virtual service addresses.
	uint64 echo_responses = 3;

	// ICMP error messages with payload too short to extract IP header.
	// ICMP errors should contain the original IP header for processing.
	uint64 payload_too_short_ip = 4;

	// ICMP error messages where source doesn't match original packet.
	// Used to validate that the error is related to a known session.
	uint64 unmatching_src_from_original = 5;

	// ICMP error messages with payload too short to extract port
	// information. Needed to identify the specific session the error
	// relates to.
	uint64 payload_too_short_port = 6;

	// ICMP error messages with unexpected transport protocol.
	// Expected TCP or UDP, but found something else.
	uint64 unexpected_transport = 7;

	// ICMP error messages that don't match any known virtual service.
	// Cannot be processed or forwarded.
	uint64 unrecognized_vs = 8;

	// ICMP error messages successfully forwarded to real servers
	uint64 forwarded_packets = 9;

	// ICMP error messages broadcasted to peer balancers.
	// Used in multi-balancer setups to ensure all balancers are aware
	// of errors.
	uint64 broadcasted_packets = 10;

	// Number of ICMP packet clones sent to peer balancers.
	// Each broadcast may result in multiple clones (one per peer).
	uint64 packet_clones_sent = 11;

	// Number of ICMP packet clones received from peer balancers
	uint64 packet_clones_received = 12;

	// Failed attempts to clone ICMP packets for broadcasting.
	// Usually due to memory allocation failures.
	uint64 packet_clone_failures = 13;
}

// Common balancer statistics.
//
// Tracks overall packet and byte counts, decapsulation operations,
// and protocol-level errors.
message CommonStats {
	// Total number of incoming packets (all protocols)
	uint64 incoming_packets = 1;

	// Total number of incoming bytes (all protocols)
	uint64 incoming_bytes = 2;

	// Packets with unexpected network protocol.
	// Expected IPv4 or IPv6, but found something else.
	uint64 unexpected_network_proto = 3;

	// Packets successfully decapsulated (IPIP or GRE removed).
	// Used for return traffic in DSR setups or multi-tier load balancing.
	uint64 decap_successful = 4;

	// Failed decapsulation attempts.
	// Packet had a decap address but couldn't be decapsulated properly.
	uint64 decap_failed = 5;

	// Total number of outgoing packets (all protocols)
	uint64 outgoing_packets = 6;

	// Total number of outgoing bytes (all protocols)
	uint64 outgoing_bytes = 7;
}

// Per-virtual-service statistics.
//
// Tracks packet processing, session creation, and error conditions
// for a specific virtual service.
message VsStats {
	// Total packets received for this virtual service
	uint64 incoming_packets = 1;

	// Total bytes received for this virtual service
	uint64 incoming_bytes = 2;

	// Packets rejected due to source address filtering.
	// Source address not in the allowed_srcs list.
	uint64 packet_src_not_allowed = 3;

	// Packets dropped because no real servers are available.
	// All reals are either disabled, removed, or have zero weight.
	uint64 no_reals = 4;

	// Packets processed in One Packet Scheduler (OPS) mode.
	// Each packet is independently scheduled without session tracking.
	uint64 ops_packets = 5;

	// Packets dropped due to session table overflow.
	// Session table is full and cannot create new sessions.
	uint64 session_table_overflow = 6;

	// ICMP echo (ping) packets processed for this virtual service
	uint64 echo_icmp_packets = 7;

	// ICMP error messages processed for this virtual service
	uint64 error_icmp_packets = 8;

	// Packets for sessions assigned to disabled real servers.
	// Real was disabled after the session was created.
	uint64 real_is_disabled = 9;

	// Packets for sessions assigned to removed real servers.
	// Real was removed from configuration after the session was created.
	uint64 real_is_removed = 10;

	// Packets that could not be rescheduled to a different real.
	// Happens when the assigned real is unavailable and no alternative
	// exists.
	uint64 not_rescheduled_packets = 11;

	// ICMP error messages broadcasted to peer balancers
	uint64 broadcasted_icmp_packets = 12;

	// Total number of new sessions created for this virtual service
	uint64 created_sessions = 13;

	// Total packets successfully forwarded to real servers
	uint64 outgoing_packets = 14;

	// Total bytes successfully forwarded to real servers
	uint64 outgoing_bytes = 15;
}

// Per-real-server statistics.
//
// Tracks packet processing and session creation for a specific
// real server within a virtual service.
message RealStats {
	// Packets for sessions assigned to this real when it was disabled.
	// Real was disabled after the session was created.
	uint64 packets_real_disabled = 1;

	// Packets processed in One Packet Scheduler (OPS) mode for this real
	uint64 ops_packets = 2;

	// ICMP error messages forwarded to this real server
	uint64 error_icmp_packets = 3;

	// Total number of new sessions created for this real server
	uint64 created_sessions = 4;

	// Total packets forwarded to this real server
	uint64 packets = 5;

	// Total bytes forwarded to this real server
	uint64 bytes = 6;
}

// Real server statistics with identifier.
//
// Associates statistics with a specific real server.
message NamedRealStats {
	// Real server identifier
	RealIdentifier real = 1;

	// Statistics for this real server
	RealStats stats = 2;
}

// Virtual service statistics with identifier.
//
// Associates statistics with a specific virtual service and
// includes per-real statistics for all reals backing this VS.
message NamedVsStats {
	// Virtual service identifier
	VsIdentifier vs = 1;

	// Statistics for this virtual service
	VsStats stats = 2;

	// Per-real statistics for all reals backing this virtual service
	repeated NamedRealStats reals = 3;
}

// Complete balancer statistics.
//
// Aggregates all statistics for a balancer instance, including
// L4 processing, ICMP handling, common counters, and per-VS/per-real
// statistics.
message BalancerStats {
	// Layer 4 (TCP/UDP) processing statistics
	L4Stats l4 = 1;

	// ICMPv4 processing statistics
	IcmpStats icmpv4 = 2;

	// ICMPv6 processing statistics
	IcmpStats icmpv6 = 3;

	// Common statistics (all protocols)
	CommonStats common = 4;

	// Per-virtual-service statistics with per-real breakdowns
	repeated NamedVsStats vs = 5;
}
